--- a/src/index.html
+++ b/src/index.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Canvas Pong | Webfrankly</title>
-    <style>
-      body {
-        margin: 0;
-        font-family: sans-serif;
-      }
-      canvas{
-        display: block;
-      }
 
-      .start{
-        position: absolute;
-        top: calc(50% - 20px);
-        left: calc(50% - 237.5px);
-        color: black;
-        border: 1px solid #ff7100;
-        padding: 20px;
-        display: none;
-        cursor: pointer;
-        transition: 0.2s ease-in-out;
-        background-color: white;
-        font-weight: bold;
-      }
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>Canvas Pong | Webfrankly</title>
+</head>
 
-      .start:hover{
-        background-color: #ff7100;
-        color: white;
-      }
+<body>
+  <div class="game is-active">
 
-      .start.is-active{
-        display: block
-      }
-    </style>
-  </head>
-  <body>
+    <div class="game__inner">
+      <div class="game__controls">
+        <div class="game__tag">Controls</div>
+        <img src="assets/controls.png" alt="game controls" title='game controls'>
+      </div>
 
-    <div class="start is-active">
-      Toss a pong to Your paddle, oh valley of plenty! aka start 
+      <div class="game__title text--color-p">
+          Toss a pong to Your paddle, oh valley of plenty!
+      </div>
+
+      <div class="game__button-wrapper">
+        <div class="game__button js-player-one">
+          <span class='text--xl text--color-p'>You</span>
+          <span class='text--small text--bold text--color-t'>VS</span>
+          <span class='text--xl text--color-p'>Computer</span>
+        </div>
+        <div class="game__button js-player-two">
+            <span class='text--xl text--color-p'>You</span>
+            <span class='text--small text--bold text--color-t'>VS</span>
+            <span class='text--xl text--color-p'>Friend</span>
+        </div>
+      </div>
     </div>
-    <canvas></canvas>
-  </body>
+  </div>
+
+  <canvas></canvas>
+</body>
+
 </html>
