Added game options

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,10 @@
         Toss a pong to Your paddle, oh valley of plenty!
       </div> -->
 
-      <div class="game__controls">
+      <!-- <div class="game__controls">
         <div class="game__tag">Controls</div>
         <img class="game__image" src="assets/controls.png" alt="game controls" title='game controls'>
-      </div>
+      </div> -->
 
       <div class="game__controls">
         <div class="game__tag">Game Modes</div>
@@ -63,6 +63,36 @@
         <div class="game__tag">Game Options</div>
       </div>
 
+      <div class="game-buttons__grid">
+
+        <div class="button">
+          
+          <div class='button--grow text--xl text--color-p'>
+            easy
+            <img src="./assets/easy.svg" class="button--man" alt="">
+          </div>
+
+        </div>
+
+        <div class="button">
+
+
+        <div class='button--grow text--xl text--color-p'>
+          hard
+          <img src="./assets/hard.svg" class="button--computer" alt="">
+        </div>
+        </div>
+
+        <div class="button">
+
+
+        <div class='button--grow text--xl text--color-p'>
+          insane
+          <img src="./assets/insane.svg" class="button--computer" alt="">
+        </div>
+        </div>
+
+      </div>
 
       <div class="game-options">
 
