--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
       </div>
 
       <div class="game__controls">
-        <div class="game__tag">Game Options</div>
+        <div class="game__tag">Game Level</div>
       </div>
 
       <div class="game-buttons__grid">
@@ -94,30 +94,6 @@
 
       </div>
 
-      <div class="game-options">
-
-        <div class="game-options__title">
-          Game level
-        </div>
-
-        <div class="game-options__item">
-          <label for="easy-level">Easy</label>
-          <input type="radio" id="easy-level" name="level" value="0" checked>
-          <span class="game-options__checkmark"></span>
-        </div>
-
-        <div class="game-options__item">
-          <label for="hard-level">Hard</label>
-          <input type="radio" id="hard-level" name="level" value="1">
-          <span class="game-options__checkmark"></span>
-        </div>
-
-        <div class="game-options__item">
-          <label for="insane-level">Insane</label>
-          <input type="radio" id="insane-level" name="level" value="2">
-          <span class="game-options__checkmark"></span>
-        </div>
-      </div>
     </div>
 
 
