--- a/src/index.html
+++ b/src/index.html
@@ -31,28 +31,30 @@
 
       <div class="game__controls">
         <div class="game__tag">Game Modes</div>
-
-
         <div class="game-buttons__grid">
 
-          <div class="button js-player-one">
-            <div class='button--grow text--xl text--color-p'>
-              <img src="./assets/man.svg" class="button--man" alt="">
+          <div class="button"> <input type="radio" class="button__radio" name="player" value="computer" checked>
+            <div class="button__inner">
+              <div class='button__item text--xl text--color-p'>
+                <img src="./assets/man.svg" class="button--man" alt="">
+              </div>
+              <div class='button__item text--xl text--bold'>Vs <br> Computer</div>
+              <div class='button__item text--xl text--color-p'>
+                <img src="./assets/ai.svg" class="button--computer" alt="">
+              </div>
             </div>
-            <div class='button--grow text--xl text--bold'>Vs <br> Computer</div>
-            <div class='button--grow text--xl text--color-p'>
-              <img src="./assets/ai.svg" class="button--computer" alt="">
-            </div>
-
           </div>
 
-          <div class="button js-player-two">
-            <div class='button--grow text--xl text--color-p'>
-              <img src="./assets/man.svg" class="button--man" alt="">
-            </div>
-            <div class='button--grow text--xl text--bold'>Vs <br> Friend</div>
-            <div class='button--grow text--xl text--color-p'>
-              <img src="./assets/man.svg" class="button--man" alt="">
+          <div class="button">
+            <input type="radio" class="button__radio" name="player" value="friend">
+            <div class="button__inner">
+              <div class='button__item text--xl text--color-p'>
+                <img src="./assets/man.svg" class="button--man" alt="">
+              </div>
+              <div class='button__item text--xl text--bold'>Vs <br> Friend</div>
+              <div class='button__item text--xl text--color-p'>
+                <img src="./assets/man.svg" class="button--man" alt="">
+              </div>
             </div>
           </div>
 
@@ -61,37 +63,40 @@
 
       <div class="game__controls">
         <div class="game__tag">Game Level</div>
-      </div>
 
+        
       <div class="game-buttons__grid">
 
-        <div class="button">
-          
-          <div class='button--grow text--xl text--color-p'>
-            easy
-            <img src="./assets/easy.svg" class="button--man" alt="">
+          <div class="button">
+            <input type="radio" class="button__radio" name="level" value="easy" checked>
+            <div class="button__inner">
+              <div class='button__item text--xl'>
+                <img src="./assets/easy.svg" class="button--man" alt="">
+                <span class="button__tag text--color-i">Easy</span>
+              </div>
+            </div>
           </div>
-
+  
+          <div class="button">
+            <input type="radio" class="button__radio" name="level" value="hard">
+            <div class="button__inner">
+              <div class='button__item text--xl'>
+                <img src="./assets/hard.svg" class="button--computer" alt="">
+                <span class="button__tag text--color-i">Hard</span>
+              </div>
+            </div>
+          </div>
+  
+          <div class="button">
+            <input type="radio" class="button__radio" name="level" value="hard">
+            <div class="button__inner">
+              <div class='button__item text--xl'>
+                <img src="./assets/insane.svg" class="button--computer" alt="">
+                <span class="button__tag text--color-i">Insane</span>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="button">
-
-
-        <div class='button--grow text--xl text--color-p'>
-          hard
-          <img src="./assets/hard.svg" class="button--computer" alt="">
-        </div>
-        </div>
-
-        <div class="button">
-
-
-        <div class='button--grow text--xl text--color-p'>
-          insane
-          <img src="./assets/insane.svg" class="button--computer" alt="">
-        </div>
-        </div>
-
       </div>
 
     </div>
