--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,6 @@
 
 <body>
   <div class="game is-active">
-
-
     <div class="game__left">
 
       <div class="game__logo">
@@ -18,10 +16,11 @@
       </div>
 
     </div>
+
     <div class="game__right">
 
       <!-- <div class="game__title text--color-p">
-        Toss a pong to Your paddle, oh valley of plenty!
+        Toss a pong to Your paddle, oh valley of plenty! 
       </div> -->
 
       <!-- <div class="game__controls">
@@ -64,8 +63,8 @@
       <div class="game__controls">
         <div class="game__tag">Game Level</div>
 
-        
-      <div class="game-buttons__grid">
+
+        <div class="game-buttons__grid">
 
           <div class="button">
             <input type="radio" class="button__radio" name="level" value="easy" checked>
@@ -76,7 +75,7 @@
               </div>
             </div>
           </div>
-  
+
           <div class="button">
             <input type="radio" class="button__radio" name="level" value="hard">
             <div class="button__inner">
@@ -86,7 +85,7 @@
               </div>
             </div>
           </div>
-  
+
           <div class="button">
             <input type="radio" class="button__radio" name="level" value="hard">
             <div class="button__inner">
@@ -99,16 +98,24 @@
         </div>
       </div>
 
+      <div class="game__start">
+        <div class="game-buttons__grid">
+
+          <div class="button js-start-game">
+            <div class="button__inner button__inner--padding">
+              <div class="button__title text--xl text--color-p">
+                Toss a pong to Your paddle, oh valley of plenty!
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
 
-
-
-
   </div>
-
-
-  </div>
-
   <canvas></canvas>
 </body>
 
