--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                 <div class='button__item text--xl text--color-p'>
                   <img src="./assets/man.svg" class="button--man" alt="">
                 </div>
-                <div class='button__item text--xl text--bold'>Vs <br> Computer</div>
+                <div class='button__item text--xl '>Vs <br> Computer</div>
                 <div class='button__item text--xl text--color-p'>
                   <img src="./assets/ai.svg" class="button--computer" alt="">
                 </div>
@@ -50,7 +50,7 @@
                 <div class='button__item text--xl text--color-p'>
                   <img src="./assets/man.svg" class="button--man" alt="">
                 </div>
-                <div class='button__item text--xl text--bold'>Vs <br> Friend</div>
+                <div class='button__item text--xl '>Vs <br> Friend</div>
                 <div class='button__item text--xl text--color-p'>
                   <img src="./assets/man.svg" class="button--man" alt="">
                 </div>
@@ -87,7 +87,7 @@
             </div>
 
             <div class="button">
-              <input type="radio" class="button__radio" name="level" value="hard">
+              <input type="radio" class="button__radio" name="level" value="insane">
               <div class="button__inner">
                 <div class='button__item text--xl'>
                   <img src="./assets/insane.svg" class="button--computer" alt="">
@@ -95,6 +95,55 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+
+        <div class="game__controls">
+          <div class="game__tag">Game Music</div>
+
+
+          <div class="game-buttons__grid">
+
+            <div class="button button--quarter">
+              <input type="radio" class="button__radio" name="music" value="1" checked>
+              <div class="button__inner">
+                <div class='button__item text--xl'>
+                  <img src="./assets/music-notes.svg" class="button--man" alt="">
+                  <span class="button__tag text--color-i">May</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="button button--quarter">
+              <input type="radio" class="button__radio" name="music" value="2">
+              <div class="button__inner">
+                <div class='button__item text--xl'>
+                  <img src="./assets/music-notes.svg" class="button--man" alt="">
+                  <span class="button__tag text--color-i">Rolem</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="button button--quarter">
+              <input type="radio" class="button__radio" name="music" value="3">
+              <div class="button__inner">
+                <div class='button__item text--xl'>
+                  <img src="./assets/music-notes.svg" class="button--man" alt="">
+                  <span class="button__tag text--color-i">Captain Glouglous</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="button button--quarter">
+              <input type="radio" class="button__radio" name="music" value="4">
+              <div class="button__inner">
+                <div class='button__item text--xl'>
+                  <img src="./assets/mute.svg" class="button--man" alt="">
+                  <span class="button__tag text--color-i">Muted</span>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
 
