Added music to app

--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,8 @@
             <button type="submit" class="button js-start-game">
               <div class="button__inner button__inner--padding">
                 <div class="button__title text--xl text--color-p">
-                  Toss a pong to Your paddle, oh valley of plenty!
+                 <!-- Toss a pong to Your paddle, oh valley of plenty! -->
+                  Start
                 </div>
               </div>
             </div>
