fixed music preview

--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,9 @@
 
             <div class="button button--quarter">
               <input type="radio" class="button__radio" name="music" value="1" checked>
+              <div class="button__preview js-music-preview">
+                <img src="./assets/play-button.svg" class="" alt="">
+              </div>
               <div class="button__inner">
                 <div class='button__item text--xl'>
                   <img src="./assets/music-notes.svg" class="button--man" alt="">
@@ -116,6 +119,9 @@
 
             <div class="button button--quarter">
               <input type="radio" class="button__radio" name="music" value="2">
+              <div class="button__preview js-music-preview">
+                <img src="./assets/play-button.svg" class="" alt="">
+              </div>
               <div class="button__inner">
                 <div class='button__item text--xl'>
                   <img src="./assets/music-notes.svg" class="button--man" alt="">
@@ -126,6 +132,9 @@
 
             <div class="button button--quarter">
               <input type="radio" class="button__radio" name="music" value="3">
+              <div class="button__preview js-music-preview">
+                <img src="./assets/play-button.svg" class="" alt="">
+              </div>
               <div class="button__inner">
                 <div class='button__item text--xl'>
                   <img src="./assets/music-notes.svg" class="button--man" alt="">
